force-app/main/default/objects/Opportunity/fields/Alternative_Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Event_Date__c</fullName>
    <inlineHelpText>Enter the client&apos;s backup date or preferred timeframe.</inlineHelpText>
    <label>Alternative Event Date</label>
    <length>100</length>
    <type>Text</type>
</CustomField>