force-app/main/default/objects/Opportunity/fields/Calendar_Event_Id__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Event_Id__c</fullName>
    <label>Google Calendar Event ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>