force-app/main/default/objects/Opportunity/fields/Client_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Client_Name_Formula__c</fullName>
    <formula>Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Name</label>
    <type>Text</type>
</CustomField>