force-app/main/default/objects/Opportunity/fields/Contract_HTML__c.field-meta.xml
<CustomField>
    <fullName>Contract_HTML__c</fullName>
    <label>Contract HTML</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>