force-app/main/default/objects/Opportunity/fields/Contract_Signed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Contract_Signed_Date_Time__c</fullName>
    <label>Contract Signed Date/Time</label>
    <type>DateTime</type>
</CustomField>