force-app/main/default/objects/Opportunity/fields/Contract_Signed_Name__c.field-meta.xml
<CustomField>
    <fullName>Contract_Signed_Name__c</fullName>
    <label>Contract Signed Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>