force-app/main/default/objects/Opportunity/fields/Contract_Signer_IP__c.field-meta.xml
<CustomField>
    <fullName>Contract_Signer_IP__c</fullName>
    <label>Contract Signer IP</label>
    <length>100</length>
    <type>Text</type>
</CustomField>