force-app/main/default/objects/Opportunity/fields/Contract_Token__c.field-meta.xml
<CustomField>
    <fullName>Contract_Token__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Contract Token</label>
    <length>72</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>