force-app/main/default/objects/Opportunity/fields/Date_Flexibility__c.field-meta.xml
<CustomField>
    <fullName>Date_Flexibility__c</fullName>
    <label>Date Flexibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>