force-app/main/default/objects/Opportunity/fields/Drive_Folder_URL__c.field-meta.xml
<CustomField>
    <fullName>Drive_Folder_URL__c</fullName>
    <label>Drive Folder URL</label>
    <type>Url</type>
</CustomField>