force-app/main/default/objects/Opportunity/fields/Estimated_Budget__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Budget__c</fullName>
    <label>Estimated Budget</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$1000-$5000</fullName>
            </value>
            <value>
                <fullName>$5000-$15000</fullName>
            </value>
            <value>
                <fullName>$15000+</fullName>
            </value>
            <value>
                <fullName>Custom / Flexible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>