force-app/main/default/objects/Opportunity/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wedding Ceremony</fullName>
            </value>
            <value>
                <fullName>Wedding Ceremony &amp; Reception</fullName>
            </value>
            <value>
                <fullName>Wedding Reception</fullName>
            </value>
            <value>
                <fullName>Wedding Other</fullName>
            </value>
            <value>
                <fullName>Anniversary</fullName>
            </value>
            <value>
                <fullName>Baby Shower</fullName>
            </value>
            <value>
                <fullName>Bridal Shower</fullName>
            </value>
            <value>
                <fullName>Coming-of-Age Ceremony</fullName>
            </value>
            <value>
                <fullName>Bar/Bat Mitzvah</fullName>
            </value>
            <value>
                <fullName>Graduation</fullName>
            </value>
            <value>
                <fullName>Holiday Party</fullName>
            </value>
            <value>
                <fullName>Cocktail Reception</fullName>
            </value>
            <value>
                <fullName>Memorial Service</fullName>
            </value>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>Corporate Retreat</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
            <value>
                <fullName>Seminar</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>