force-app/main/default/objects/Opportunity/fields/Invoice_Accepted_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Accepted_Date_Time__c</fullName>
    <label>Invoice Accepted Date/Time</label>
    <type>DateTime</type>
</CustomField>