force-app/main/default/objects/Opportunity/fields/Invoice_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Sent_Date__c</fullName>
    <label>Invoice Sent Date</label>
    <type>Date</type>
</CustomField>