force-app/main/default/objects/Opportunity/fields/Quote_Approved_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Quote_Approved_Date_Time__c</fullName>
    <label>Quote Approved Date/Time</label>
    <type>DateTime</type>
</CustomField>