force-app/main/default/objects/Opportunity/fields/Quote_Approved_Name__c.field-meta.xml
<CustomField>
    <fullName>Quote_Approved_Name__c</fullName>
    <label>Quote Approved Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>