force-app/main/default/objects/Opportunity/fields/Quote_Approver_IP__c.field-meta.xml
<CustomField>
    <fullName>Quote_Approver_IP__c</fullName>
    <label>Quote Approver IP</label>
    <length>100</length>
    <type>Text</type>
</CustomField>