force-app/main/default/objects/Opportunity/fields/Quote_HTML__c.field-meta.xml
<CustomField>
    <fullName>Quote_HTML__c</fullName>
    <label>Quote HTML</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>