force-app/main/default/objects/Opportunity/fields/Quote_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Quote_Sent_Date__c</fullName>
    <label>Quote Sent Date</label>
    <type>Date</type>
</CustomField>