force-app/main/default/objects/Opportunity/fields/Quote_Token__c.field-meta.xml
<CustomField>
    <fullName>Quote_Token__c</fullName>
    <label>Quote Token</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>