force-app/main/default/objects/Opportunity/fields/Services__c.field-meta.xml
<CustomField>
    <fullName>Services__c</fullName>
    <label>Services</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Services</valueSetName>
    </valueSet>
</CustomField>