force-app/main/default/objects/Opportunity/fields/Setup_Date__c.field-meta.xml
<CustomField>
    <fullName>Setup_Date__c</fullName>
    <inlineHelpText>Date when the setup of the event needs to take place</inlineHelpText>
    <label>Setup Date</label>
    <type>Date</type>
</CustomField>