force-app/main/default/objects/Opportunity/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <inlineHelpText>The system-calculated total based on all Line Item prices. To adjust this number, add, edit, or remove records in the Line Items related list</inlineHelpText>
    <label>Total Amount</label>
    <summarizedField>Line_Item__c.Total_Price__c</summarizedField>
    <summaryForeignKey>Line_Item__c.Event__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>