force-app/main/default/objects/Opportunity/fields/Venue__c.field-meta.xml
<CustomField>
    <fullName>Venue__c</fullName>
    <label>Venue</label>
    <type>Address</type>
</CustomField>