force-app/main/default/objects/Opportunity/fields/Venue_Locked__c.field-meta.xml
<CustomField>
    <fullName>Venue_Locked__c</fullName>
    <label>Venue Locked</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>