force-app/main/default/objects/Opportunity/fields/Venue_Place_Id__c.field-meta.xml
<CustomField>
    <fullName>Venue_Place_Id__c</fullName>
    <label>Venue Place ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>