force-app/main/default/objects/Opportunity/fields/Venue_WebtoLead_Form__c.field-meta.xml
<CustomField>
    <fullName>Venue_WebtoLead_Form__c</fullName>
    <label>Venue (WebtoLead Form)</label>
    <type>TextArea</type>
</CustomField>