force-app/main/default/objects/Opportunity/recordTypes/Event.recordType-meta.xml
<RecordType>
    <fullName>Event</fullName>
    <active>true</active>
    <businessProcess>Event Sales Process</businessProcess>
    <label>Event</label>
</RecordType>